# Demo---BHS-Raw-Data-Processing-Clinical-Labels

./: .dockerignore  .gitignore  Dockerfile  README.md  dashboard-app.py  devcontainer-template.json  docker-compose.yaml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.streamlit/: config.toml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/features/: __init__.py  activity.py  hr.py  registry.py  sleep_feat.py  spectrogram.py  step_feat.py
backend/app/routers/: cohorts.py  exports.py  feature_sets.py  features.py  labels.py  signals.py  subjects.py  wsm.py
backend/app/schemas/: cohorts.py  exports.py  features.py  labels.py  saved.py  signals.py  subjects.py
backend/app/services/: bq.py  gcs.py  persistence.py
backend/scripts/: materialize_demo.sql
backend/tests/: test_smoke.py
docs/: QUICKSTART.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  plotly-dist-min.d.ts
frontend/src/api/: client.ts  cohorts.ts  download.ts  exports.ts  featureMeta.ts  features.ts  hooks.ts  labels.ts  saved.ts  stats.ts  types.ts
frontend/src/components/: AnnotationSidebar.tsx  DayNavigator.tsx  ErrorBoundary.tsx  HelpPanel.tsx  InfoTip.tsx  PlotlyChart.tsx  SaveDialog.tsx  SignalPanel.tsx  WSMPanels.tsx
frontend/src/pages/: CohortInsights.tsx  FeatureLab.tsx  SavedWork.tsx  SignalExplorer.tsx  SubjectBrowser.tsx
